--- a/ANM WEBSITE/index.html
+++ b/ANM WEBSITE/index.html
@@ -5,24 +5,19 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Anime Spirit</title>
 
-  <!-- Favicon -->
-  <link rel="icon" href="profile.jpg">
+  <link rel="icon" href="/ANIME_SPIRIT/profile.jpg">
 
-  <!-- Link CSS -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/ANIME_SPIRIT/style.css">
 </head>
 <body>
 
-  <!-- Banner -->
   <div class="banner">
-    <img src="banner.jpg" alt="Banner" class="banner-img">
-    <img src="profile.jpg" alt="Profile" class="profile">
+    <img src="/ANIME_SPIRIT/banner.jpg" alt="Banner" class="banner-img">
+    <img src="/ANIME_SPIRIT/profile.jpg" alt="Profile" class="profile">
   </div>
 
-  <!-- Title -->
   <h1>ANIME SPIRIT</h1>
 
-  <!-- Subtitle + Nav -->
   <header>
     <p class="subtitle">MYSTERY OF YOUR FAVORITE ANIMATION SHOWS</p>
     <nav class="nav-bar">
@@ -33,7 +28,6 @@
     </nav>
   </header>
 
-  <!-- Sections -->
   <div id="mystery" class="tab-content active">
     <h2>Mystery</h2>
     <p>All your mysterious anime facts here...</p>
@@ -54,7 +48,6 @@
     <p>Learn more about Anime Spirit.</p>
   </div>
 
-  <!-- Link JavaScript -->
-  <script src="script.js"></script>
+  <script src="/ANIME_SPIRIT/script.js"></script>
 </body>
 </html>
