--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <a class="active" data-tab="mystery">MYSTERY</a>
       <a data-tab="news">NEWS</a>
       <a data-tab="community">COMMUNITY</a>
+      <a data-tab="quiz">QUIZ</a>
       <a data-tab="about">ABOUT</a>
     </nav>
   </header>
@@ -42,6 +43,10 @@
     <h2>Community</h2>
     <p>Fan discussions and activities.</p>
   </div>
+  <div id="quiz" class="tab-content">
+    <h2>Quiz</h2>
+    <p>Quiz coming soon</p>
+  </div>
 
   <div id="about" class="tab-content">
     <h2>About</h2>
@@ -51,3 +56,4 @@
   <script src="/ANIME_SPIRIT/script.js"></script>
 </body>
 </html>
+
