--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <title>Anime Spirit</title>
 
   <link rel="icon" href="/ANIME_SPIRIT/profile.jpg">
-
   <link rel="stylesheet" href="/ANIME_SPIRIT/style.css">
 </head>
 <body>
 
+  <!-- Banner -->
   <div class="banner">
-    <img src="/ANIME_SPIRIT/banner.jpg" alt="Banner" class="banner-img">
     <img src="/ANIME_SPIRIT/profile.jpg" alt="Profile" class="profile">
   </div>
 
@@ -29,6 +28,7 @@
     </nav>
   </header>
 
+  <!-- Tab Contents -->
   <div id="mystery" class="tab-content active">
     <h2>Mystery</h2>
     <p>All your mysterious anime facts here...</p>
@@ -43,6 +43,7 @@
     <h2>Community</h2>
     <p>Fan discussions and activities.</p>
   </div>
+
   <div id="quiz" class="tab-content">
     <h2>Quiz</h2>
     <p>Quiz coming soon</p>
@@ -56,4 +57,3 @@
   <script src="/ANIME_SPIRIT/script.js"></script>
 </body>
 </html>
-
