--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
 
   <!-- Tab Contents -->
-  <div id="mystery" class="tab-content active">
+  <div id="mystery" class="tab-content active" title="ANIME MYSTERY">
     <h2>Mystery</h2>
     <p>All your mysterious anime facts here...</p>
   </div>
@@ -57,3 +57,4 @@
   <script src="/ANIME_SPIRIT/script.js"></script>
 </body>
 </html>
+
